# test_tinycc

./: .gitignore  CMakeLists.txt  README.md  test1.cpp  test2.cpp
